--- a/spock-grails/application.properties
+++ b/spock-grails/application.properties
@@ -1,4 +1,4 @@
 #Sun Apr 03 16:45:40 EST 2011
 app.version=0.6-groovy-1.7-SNAPSHOT
-app.grails.version=1.4.0.M1
+app.grails.version=1.4.0.BUILD-SNAPSHOT
 app.name=spock-grails
