--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,4 @@ include 'spock-spring'
 include 'spock-tapestry'
 include 'spock-unitils'
 include 'spock-grails-support'
-include 'spock-grails'
+//include 'spock-grails'
