updated wrapper version for spock-example build polishing

--- a/spock-example/build.xml
+++ b/spock-example/build.xml
@@ -88,10 +88,11 @@
   </target>
 
   <target name="compile" depends="copy.resources">
+    <!-- Using the Groovy compiler from classpath.spock is a simple and safe setup -->
     <groovyc
       srcdir="${src.dir}"
-     destdir="${build.dir}"
-     classpathref="classpath.spock" />
+      destdir="${build.dir}"
+      classpathref="classpath.spock" />
   </target>
   
   <target name="test" depends="compile">
