fixed javadoc links

--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ allprojects {
     javadoc {
       include "spock/**"
       configure(options) {
-        links "http://java.sun.com/j2se/1.5.0/docs/api"
+        links "http://download.oracle.com/javase/1.5.0/docs/api/"
         links "http://groovy.codehaus.org/gapi"
         links "http://kentbeck.github.com/junit/javadoc/4.8"
         links "http://www.jarvana.com/jarvana/inspect/org/hamcrest/hamcrest-core/1.2/hamcrest-core-1.2-javadoc.jar"
