--- a/spock-core/build.gradle
+++ b/spock-core/build.gradle
@@ -5,7 +5,7 @@ description = "Spock Framework - Core Module"
 dependencies {
   compile libs.groovy // simplest way to add Groovy dependency to POM
   compile libs.junit
-  compile libs.hamcrest_core // until https://github.com/KentBeck/junit/issues/issue/165 gets fixed
+  compile libs.hamcrest_core
 
   compile(libs.ant, optional)
   compile(libs.asm, optional)
