--- a/spock-tapestry/build.gradle
+++ b/spock-tapestry/build.gradle
@@ -5,7 +5,7 @@ description = "Spock Framework - Tapestry Module"
 repositories {
   // need to explicitely add repository defined in tapestry-ioc POM
   // (workaround for http://jira.codehaus.org/browse/GRADLE-611)
-  mavenRepo(urls: "http://repository.jboss.com/maven2")
+  mavenRepo(url: "http://repository.jboss.com/maven2")
 }
 
 dependencies {
