--- a/spock-example/build.gradle
+++ b/spock-example/build.gradle
@@ -8,9 +8,9 @@ repositories {
   // Spock release versions are available from Maven Central
   mavenCentral()
   // only required if a snapshot version of Spock is used
-  mavenRepo urls: "http://m2repo.spockframework.org/snapshots" 
+  mavenRepo url: "http://m2repo.spockframework.org/snapshots" 
   // only required if a snapshot version of Groovy is used
-  mavenRepo urls: "http://snapshots.repository.codehaus.org"
+  mavenRepo url: "http://snapshots.repository.codehaus.org"
 }
 
 dependencies {
