--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ libs = [
   asm: "asm:asm:3.2", // use same version as Groovy 1.8
   cglib: "cglib:cglib-nodep:2.2",
   easymock: "org.easymock:easymock:3.0",
-  groovy: "org.codehaus.groovy:groovy-all:1.8.3",
+  groovy: "org.codehaus.groovy:groovy-all:1.9.0-beta-5-SNAPSHOT",
   h2database: "com.h2database:h2:1.2.147",
   hamcrest_core: "org.hamcrest:hamcrest-core:1.2",
   jmock: "org.jmock:jmock:2.5.1",
@@ -18,7 +18,7 @@ libs = [
 
 allprojects {
   group = "org.spockframework"
-  version = "0.6-groovy-1.8-SNAPSHOT"
+  version = "0.6-groovy-1.9-SNAPSHOT"
 
   apply from: profile("common")
 
