--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.spockframework</groupId>
   <artifactId>spock-parent</artifactId>
   <packaging>pom</packaging>
-  <version>0.6-groovy-1.8-SNAPSHOT</version>
+  <version>0.6-groovy-1.9-SNAPSHOT</version>
   <name>Spock Framework - Umbrella Project</name>
   <url>http://spockframework.org</url>
   <description>Spock is a testing and specification framework for Java and Groovy applications.</description>
@@ -100,7 +100,7 @@
             <dependency>
               <groupId>org.codehaus.groovy</groupId>
               <artifactId>groovy-all</artifactId>
-              <version>1.8.0</version>
+              <version>1.9.0-beta-5-SNAPSHOT</version>
             </dependency> 
             <dependency> <!-- required by GMaven's execute goal -->
                <groupId>org.apache.ant</groupId>
@@ -135,7 +135,7 @@
       <dependency>
         <groupId>org.codehaus.groovy</groupId>
         <artifactId>groovy-all</artifactId>
-        <version>1.8.0</version>
+        <version>1.9.0-beta-5-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
