--- a/spock-example/build.gradle
+++ b/spock-example/build.gradle
@@ -15,8 +15,8 @@ repositories {
 
 dependencies {
   // mandatory dependencies for using Spock
-  groovy "org.codehaus.groovy:groovy-all:1.8.3"
-  testCompile "org.spockframework:spock-core:0.6-groovy-1.8-SNAPSHOT"
+  groovy "org.codehaus.groovy:groovy-all:1.9.0-beta-5-SNAPSHOT"
+  testCompile "org.spockframework:spock-core:0.6-groovy-1.9-SNAPSHOT"
 
   // optional dependencies for using Spock
   testCompile "org.hamcrest:hamcrest-core:1.2" // only necessary if Hamcrest matchers are used
