--- a/spock-example/build.gradle
+++ b/spock-example/build.gradle
@@ -2,6 +2,7 @@ apply plugin: "groovy"
 apply plugin: "idea"
 apply plugin: "eclipse"
 
+version = "0.6-groovy-2.0-SNAPSHOT"
 description = "Spock Framework - Example Project"
 
 repositories {
@@ -15,8 +16,8 @@ repositories {
 
 dependencies {
   // mandatory dependencies for using Spock
-  groovy "org.codehaus.groovy:groovy-all:1.9.0-beta-5-SNAPSHOT"
-  testCompile "org.spockframework:spock-core:0.6-groovy-1.9-SNAPSHOT"
+  groovy "org.codehaus.groovy:groovy-all:2.0.0-beta-2-SNAPSHOT"
+  testCompile "org.spockframework:spock-core:0.6-groovy-2.0-SNAPSHOT"
 
   // optional dependencies for using Spock
   testCompile "org.hamcrest:hamcrest-core:1.2" // only necessary if Hamcrest matchers are used
