--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,6 @@ include 'spock-specs'
 include 'spock-spring'
 include 'spock-tapestry'
 include 'spock-unitils'
-include 'spock-grails'
-include 'spock-grails-support'
+//include 'spock-grails'
+//include 'spock-grails-support'
+//include 'spock-maven'
