--- a/build.gradle
+++ b/build.gradle
@@ -75,13 +75,17 @@ allprojects {
     }
 
     task sourcesJar(type: Jar) {
-      classifier = "sources"
+      classifier "sources"
       from sourceSets.main.allSource
     }
 
-    task javadocJar(type: Jar, dependsOn: javadoc) {
-      classifier = "javadoc"
-      from javadoc.destinationDir
+    task javadocJar(type: Jar) {
+      classifier "javadoc"
+      from javadoc
+    }
+  
+    artifacts {
+      archives sourcesJar, javadocJar
     }
   }
 }
