Run the spock-specs tests in parallel.

--- a/spock-specs/build.gradle
+++ b/spock-specs/build.gradle
@@ -16,3 +16,6 @@ dependencies {
   testRuntime libs.h2database
 }
 
+tasks.withType(Test) {
+    maxParallelForks Math.max(2, (int) (Runtime.runtime.availableProcessors() / 2))
+}
