Add idea code style.

--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,9 @@ idea {
     jdkName "1.6"
     ipr {
       withXml { provider ->
-        provider.asNode().component.find { it.'@name' == 'VcsDirectoryMappings' }?.mapping[0].'@vcs' = 'Git'
+        def node = provider.asNode()
+        node.component.find { it.'@name' == 'VcsDirectoryMappings' }?.mapping[0].'@vcs' = 'Git'
+        node.append(new XmlParser().parse(file("ideaCodeStyle.xml")))
       }
     }
   }
