--- a/build.gradle
+++ b/build.gradle
@@ -104,5 +104,5 @@ File profile(String name) {
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = "1.0-milestone-7"
+  gradleVersion = "1.0-milestone-8a"
 }
