--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,13 @@ libs = [
   cglib: "cglib:cglib-nodep:2.2",
   easymock: "org.easymock:easymock:3.0",
   groovy: "org.codehaus.groovy:groovy-all:1.7.10",
-  h2database: "com.h2database:h2:1.2.147",
+  h2database: "com.h2database:h2:1.3.164",
   hamcrest_core: "org.hamcrest:hamcrest-core:1.2",
   jmock: "org.jmock:jmock:2.5.1",
   jmock_junit4: "org.jmock:jmock-junit4:2.5.1",
   junit: "junit:junit-dep:4.9",
   log4j: "log4j:log4j:1.2.16",
-  mockito: "org.mockito:mockito-all:1.8.5",
+  mockito: "org.mockito:mockito-all:1.9.0",
   objenesis: "org.objenesis:objenesis:1.2",
   slf4j: "org.slf4j:slf4j-log4j12:1.5.5"
 ]
@@ -90,7 +90,7 @@ idea {
       withXml { provider ->
         def node = provider.asNode()
         node.component.find { it.'@name' == 'VcsDirectoryMappings' }?.mapping[0].'@vcs' = 'Git'
-        node.append(new XmlParser().parse(file("ideaCodeStyle.xml")))
+        node.append(new XmlParser().parse(file("config/ideaCodeStyle.xml")))
       }
     }
   }
