--- a/spock-core/build.gradle
+++ b/spock-core/build.gradle
@@ -1,6 +1,11 @@
 apply from: profile("publishMaven")
 
-description = "Spock Framework - Core Module"
+displayName = "Spock Framework - Core Module"
+
+description = "Spock is a testing and specification framework for Java and Groovy applications. \
+What makes it stand out from the crowd is its beautiful and highly expressive specification language. \
+Thanks to its JUnit runner, Spock is compatible with most IDEs, build tools, and continuous integration servers. \
+Spock is inspired from JUnit, jMock, RSpec, Groovy, Scala, Vulcans, and other fascinating life forms."
 
 dependencies {
   compile libs.groovy // simplest way to add Groovy dependency to POM
