--- a/spock-specs/build.gradle
+++ b/spock-specs/build.gradle
@@ -18,6 +18,6 @@ dependencies {
   testRuntime libs.h2database
 }
 
-tasks.withType(Test) {
-    maxParallelForks Math.max(2, (int) (Runtime.runtime.availableProcessors() / 2))
-}
+//tasks.withType(Test) {
+//    maxParallelForks Math.max(2, (int) (Runtime.runtime.availableProcessors() / 2))
+//}
