--- a/spock-guice/build.gradle
+++ b/spock-guice/build.gradle
@@ -6,7 +6,7 @@ description = "Spock's Guice Module provides support for testing Guice 2/3 based
 
 dependencies {
   compile project(":spock-core")
-  compile "com.google.inject:guice:2.0"
+  compile "com.google.inject:guice:2.0", provided
   // surfaces in the Guice API; groovyc complains if we don't add it
-  compile "aopalliance:aopalliance:1.0"
+  compile "aopalliance:aopalliance:1.0", internal
 }
