--- a/spock-tapestry/build.gradle
+++ b/spock-tapestry/build.gradle
@@ -7,14 +7,12 @@ description = "Spock's Tapestry Module provides support for testing Tapestry 5 b
 repositories {
   // need to explicitly add repository defined in tapestry-ioc POM
   // (workaround for http://jira.codehaus.org/browse/GRADLE-611)
-  mavenRepo(url: "http://repository.jboss.com/maven2")
+  maven { url "http://repository.jboss.com/maven2" }
 }
 
 dependencies {
   compile project(":spock-core")
-  compile "org.apache.tapestry:tapestry-ioc:5.2.4"
-  compile "org.apache.tapestry:tapestry5-annotations:5.2.4"
-  compile "org.slf4j:slf4j-api:1.6.1"
-  compile libs.junit
+  compile "org.apache.tapestry:tapestry-ioc:5.2.4", provided
+  compile "org.apache.tapestry:tapestry5-annotations:5.2.4", provided
 }
 
