--- a/spock-core/build.gradle
+++ b/spock-core/build.gradle
@@ -12,9 +12,9 @@ dependencies {
   compile libs.junit
   compile libs.hamcrest_core
 
-  compile(libs.ant, optional)
-  compile(libs.asm, optional)
-  compile(libs.cglib, optional)
-  compile(libs.objenesis, optional)
+  compile libs.ant, optional
+  compile libs.asm, optional
+  compile libs.cglib, optional
+  compile libs.objenesis, optional
 }
 
