spock 0.6-groovy-2.0 only gets published to spock's maven repo

--- a/gradle/publishMaven.gradle
+++ b/gradle/publishMaven.gradle
@@ -53,11 +53,7 @@ uploadArchives { task ->
     if (isSnapshotVersion) {
       snapshotRepository(url: "file:///var/www/m2repo/snapshots")
     } else {
-      repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-        if (project.hasProperty("sonatypeOssUsername")) {
-          authentication(userName: sonatypeOssUsername, password: sonatypeOssPassword)
-        }
-      }
+      repository(url: "file:///var/www/m2repo/releases")
     }
   }
 }
