--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ libs = [
 
 allprojects {
   group = "org.spockframework"
-  version = "0.6-groovy-1.8"
+  version = "0.7-groovy-1.8-SNAPSHOT"
 
   apply from: script("common")
 }
