--- a/spock-maven/src/main/resources/META-INF/maven/plugin.xml
+++ b/spock-maven/src/main/resources/META-INF/maven/plugin.xml
@@ -3,7 +3,7 @@
   <description></description>
   <groupId>org.spockframework</groupId>
   <artifactId>spock-maven</artifactId>
-  <version>0.6-groovy-1.8</version>
+  <version>0.7-groovy-1.8-SNAPSHOT</version>
   <goalPrefix>spock</goalPrefix>
   <isolatedRealm>false</isolatedRealm>
   <inheritedByDefault>true</inheritedByDefault>
@@ -106,7 +106,7 @@ will be added to the global Surefire configuration.</description>
       <groupId>org.spockframework</groupId>
       <artifactId>spock-core</artifactId>
       <type>jar</type>
-      <version>0.6-groovy-1.8</version>
+      <version>0.7-groovy-1.8-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
