--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ subprojects {
 
   signing {
     sign configurations.archives
-    required { !isSnapshotVersion && gradle.taskGraph.hasTask(uploadArchives) }
+    required { gradle.taskGraph.hasTask(uploadArchives) }
   }
 
   tasks.withType(Compile) { task ->
