--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -3,9 +3,10 @@ displayName = "Spock Framework - Specs for Core Module"
 description = "Spock specifications for the Core Module. Yes, we eat our own dog food."
 
 dependencies {
+  groovy libs.junit // necessary to make @NotYetImplemented transform work (transform that ships with Groovy and statically references third-party class junit.framwork.AssertionFailedError)
+
   testCompile project(":spock-core")
   testCompile libs.hamcrest_core
-  testCompile libs.junit
   testCompile libs.easymock
   testCompile libs.jmock_junit4
   testCompile libs.jmock
