--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ libs = [
   asm: "asm:asm:3.2", // use same version as Groovy 1.8
   cglib: "cglib:cglib-nodep:2.2",
   easymock: "org.easymock:easymock:3.0",
-  groovy: "org.codehaus.groovy:groovy-all:1.8.5",
+  groovy: "org.codehaus.groovy:groovy-all:1.8.6",
   h2database: "com.h2database:h2:1.3.164",
   hamcrest_core: "org.hamcrest:hamcrest-core:1.2",
   jmock: "org.jmock:jmock:2.5.1",
@@ -84,7 +84,7 @@ task publishJavadoc(type: Sync) {
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = "1.0-milestone-8a"
+  gradleVersion = "1.0-rc-3"
 }
 
 File script(String name) {
