--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,9 @@ libs = [
   easymock: "org.easymock:easymock:3.0",
   groovy: "org.codehaus.groovy:groovy-all:1.8.6",
   h2database: "com.h2database:h2:1.3.164",
-  hamcrest_core: "org.hamcrest:hamcrest-core:1.2",
   jmock: "org.jmock:jmock:2.5.1",
   jmock_junit4: "org.jmock:jmock-junit4:2.5.1",
-  junit: "junit:junit-dep:4.9",
+  junit: ["junit:junit-dep:4.10@jar", "org.hamcrest:hamcrest-core:1.2"],
   log4j: "log4j:log4j:1.2.16",
   mockito: "org.mockito:mockito-all:1.9.0",
   objenesis: "org.objenesis:objenesis:1.2"
