removed use of dynamic properties in gradle build

--- a/gradle/common.gradle
+++ b/gradle/common.gradle
@@ -1,2 +1,4 @@
-isSnapshotVersion = project.version.endsWith("-SNAPSHOT")
-isRootProject = project == project.rootProject
+ext {
+  isSnapshotVersion = project.version.endsWith("-SNAPSHOT")
+  isRootProject = project == project.rootProject
+}
