--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ ext {
     asm: "asm:asm:3.3.1", // use same version as Groovy 2.0
     cglib: "cglib:cglib-nodep:2.2",
     easymock: "org.easymock:easymock:3.0",
-    groovy: "org.codehaus.groovy:groovy-all:2.0.0-beta-3",
+    groovy: "org.codehaus.groovy:groovy-all:2.0.0-rc-1-SNAPSHOT",
     h2database: "com.h2database:h2:1.3.164",
     jmock: "org.jmock:jmock:2.5.1",
     jmock_junit4: "org.jmock:jmock-junit4:2.5.1",
