--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ description = "Spock Framework"
 ext {
   libs = [
     ant: "org.apache.ant:ant:1.8.2", // use same version as Groovy 2.0
-    asm: "asm:asm:3.3.1", // use same version as Groovy 2.0
+    asm: "org.ow2.asm:asm:4.0", // use same version as Groovy 2.0
     cglib: "cglib:cglib-nodep:2.2.2",
     easymock: "org.easymock:easymock:3.0",
-    groovy: "org.codehaus.groovy:groovy-all:2.0.0-rc-4",
+    groovy: "org.codehaus.groovy:groovy-all:2.0.0",
     h2database: "com.h2database:h2:1.3.164",
     jmock: "org.jmock:jmock:2.5.1",
     jmock_junit4: "org.jmock:jmock-junit4:2.5.1",
