--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Feb 09 20:02:58 GMT 2012
+#Sat Aug 04 14:22:22 EDT 2012
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions-snapshots/gradle-1.1-rc-1-20120706000032+0200-bin.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.1-bin.zip
