--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,25 @@
 description = "Spock Framework"
 
-libs = [
-  ant: "org.apache.ant:ant:1.8.2", // use same version as Groovy 2.0
-  asm: "asm:asm:3.3.1", // use same version as Groovy 2.0
-  cglib: "cglib:cglib-nodep:2.2",
-  easymock: "org.easymock:easymock:3.0",
-  groovy: "org.codehaus.groovy:groovy-all:2.0.0-beta-3-SNAPSHOT",
-  h2database: "com.h2database:h2:1.3.164",
-  hamcrest_core: "org.hamcrest:hamcrest-core:1.2",
-  jmock: "org.jmock:jmock:2.5.1",
-  jmock_junit4: "org.jmock:jmock-junit4:2.5.1",
-  junit: "junit:junit-dep:4.9",
-  log4j: "log4j:log4j:1.2.16",
-  mockito: "org.mockito:mockito-all:1.9.0",
-  objenesis: "org.objenesis:objenesis:1.2"
-]
+ext {
+  libs = [
+    ant: "org.apache.ant:ant:1.8.4", // use same version as Groovy 2.0
+    asm: "org.ow2.asm:asm:4.0", // use same version as Groovy 2.0
+    cglib: "cglib:cglib-nodep:2.2.2",
+    easymock: "org.easymock:easymock:3.0",
+    groovy: "org.codehaus.groovy:groovy-all:2.0.1",
+    h2database: "com.h2database:h2:1.3.164",
+    jmock: "org.jmock:jmock:2.5.1",
+    jmock_junit4: "org.jmock:jmock-junit4:2.5.1",
+    junit: ["junit:junit-dep:4.10@jar", "org.hamcrest:hamcrest-core:1.3"],
+    log4j: "log4j:log4j:1.2.16",
+    mockito: "org.mockito:mockito-all:1.9.0",
+    objenesis: "org.objenesis:objenesis:1.2"
+  ]
+}
 
 allprojects {
   group = "org.spockframework"
-  version = "0.6-groovy-2.0"
+  version = "0.6-groovy-2.0-SNAPSHOT"
 
   apply from: script("common")
 }
@@ -46,11 +47,10 @@ subprojects {
 
   signing {
     sign configurations.archives
-    required { !isSnapshotVersion && gradle.taskGraph.hasTask(uploadArchives) }
   }
 
-  tasks.withType(Compile) { task ->
-    options.useAnt = false
+  signArchives {
+    onlyIf { gradle.taskGraph.hasTask(uploadArchives) }
   }
 
   configureJavadoc(javadoc)
@@ -85,7 +85,7 @@ task publishJavadoc(type: Sync) {
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = "1.0-milestone-8a"
+  gradleVersion = "1.1"
 }
 
 File script(String name) {
@@ -98,8 +98,8 @@ def configureJavadoc(task) {
     configure(options) {
       links "http://download.oracle.com/javase/1.5.0/docs/api/"
       links "http://groovy.codehaus.org/gapi"
-      links "http://kentbeck.github.com/junit/javadoc/4.9"
-      links "http://www.jarvana.com/jarvana/inspect/org/hamcrest/hamcrest-core/1.2/hamcrest-core-1.2-javadoc.jar"
+      links "http://kentbeck.github.com/junit/javadoc/4.10"
+      links "http://www.jarvana.com/jarvana/inspect/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-javadoc.jar"
     }
   }
 }
