--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,7 @@ task publishJavadoc(type: Sync) {
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = "1.2-rc-1"
+  gradleVersion = "1.2"
 }
 
 File script(String name) {
